#7219 Signature Pad is not Responsive on Mobile Screens - fixed mobile Fixes #7219

--- a/src/signaturepad.scss
+++ b/src/signaturepad.scss
@@ -28,6 +28,7 @@
 }
 .sjs_sp_canvas {
     position: relative;
+    max-width: 100%;
 }
 .sjs_sp__background-image {
     position: absolute;
